--- a/i3/i3status-rust/left.config.toml
+++ b/i3/i3status-rust/left.config.toml
@@ -27,15 +27,22 @@ interval = 20
 warning = 20.0
 alert = 10.0
 
+# [[block]]
+# block = "disk_space"
+# path = "/media/alce"
+# alias = "🖴"
+# info_type = "available"
+# unit = "TB"
+# interval = 20
+# warning = 0.75
+# alert = 0.25
+
 [[block]]
-block = "disk_space"
-path = "/media/alce"
-alias = "🖴"
-info_type = "available"
-unit = "TB"
-interval = 20
-warning = 0.75
-alert = 0.25
+block = "net"
+device = "eno1"
+interval = 2
+speed_digits = 2
+format = "{graph_down} {speed_down} {graph_up} {speed_up}" 
 
 [[block]]
 block = "networkmanager"
@@ -53,12 +60,12 @@ device_format = "{icon} {ips}"
 # speed_digits = 3
 # format = "{speed_down} {speed_up}" 
 
-[[block]]
-block = "time"
-interval = 1
-format = "%R"
+# [[block]]
+# block = "time"
+# interval = 1
+# format = "%R"
 
-[[block]]
-block = "sound"
-step_width = 2
+# [[block]]
+# block = "sound"
+# step_width = 2
 
