--- a/i3/i3status-rust/right.config.toml
+++ b/i3/i3status-rust/right.config.toml
@@ -13,24 +13,15 @@ label = "1050 TI"
 show_clocks = true
 
 [[block]]
-block = "temperature"
-collapsed = false
-good = 50
-idle = 55
-info = 60
-warning = 70
-# alert = 80
+block = "music"
+buttons = ["play", "next"]
+max_width = 41
 
-[[block]]
-block = "load"
-interval = 1
-format = "1m: {1m} 5m: {5m}"
-
-[[block]]
-block = "time"
-interval = 1
-format = "%R"
-
+# [[block]]
+# block = "time"
+# interval = 1
+# format = "%R"
+# 
 [[block]]
 block = "sound"
 step_width = 2
